--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -13,6 +13,20 @@ environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1115318931/PYTHONP
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1115318931/PYTHONPATH/value=/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1115318931/append=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1115318931/appendContributed=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/BATCH_BUILD/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/BATCH_BUILD/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/BATCH_BUILD/value=1
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/IDF_PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/IDF_PATH/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/IDF_PATH/value=/Users/rsn/esp/esp-idf
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PATH/operation=replace
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PATH/value=/bin\:/usr/bin\:/usr/sbin\:/sbin\:/Users/RSN/esp/xtensa-esp32-elf/bin
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PYTHONPATH/delimiter=\:
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PYTHONPATH/operation=append
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/PYTHONPATH/value=/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/append=true
+environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1209062148/appendContributed=true
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1459960529/BATCH_BUILD/delimiter=\:
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1459960529/BATCH_BUILD/operation=append
 environment/project/cdt.managedbuild.toolchain.gnu.cross.base.1459960529/BATCH_BUILD/value=1
